@@ -5,8 +5,6 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-system-raid]]
 === System raid metricset
 
-beta[]
-
 include::../../../module/system/raid/_meta/docs.asciidoc[]
 
 
