@@ -5,8 +5,6 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-metricset-system-socket]]
 === System socket metricset
 
-beta[]
-
 include::../../../module/system/socket/_meta/docs.asciidoc[]
 
 
