@@ -1,3 +1,3 @@
-=== system raid MetricSet
+This is the raid metricset of the module system. It collects stats about the raid.
 
-This is the raid metricset of the module system.
+The config option `raid.mount_point:` can be used to configure the raid mount point.
