@@ -2,7 +2,7 @@
   type: group
   description: >
     raid
-  release: beta
+  release: ga
   fields:
     - name: name
       type: keyword
