@@ -2,7 +2,7 @@
   type: group
   description: >
     TCP sockets that are active.
-  release: beta
+  release: ga
   fields:
     - name: direction
       type: keyword
